# src/routes/userRoutes.js
@@ -12,7 +12,22 @@ router.get(
 );
 
 router.put(
-  '/profile', 
+  '/profile',
+    /*  
+    #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        schema: {
+            $name: 'other name',
+            creditCard: {
+                number: '6282798719838231',
+                cvv: '123',
+                expiryDate: '2027-12-01',
+                holderName: 'other name'
+            }
+        }
+    }
+*/ 
   authMiddleware, 
   UserController.updateProfile
 );
